# AdventOfCode2022

./: .gitignore  package-lock.json
day01/: data.js  day01.js  day01.ts  package.json
day02/: day02.js  day02.ts
day03/: day03.js  day03.ts
day04/: day04.hs
day05/: day05.cabal  day05.hs
day06/: day06.cabal  day06.hs
day07/: day07.cabal  day07.hs
day08/: day08.cabal  day08.hs
day09/: day09.cabal  day09.hs
day10/: day10.cabal  day10.hs
day11/: day11.cabal  day11.hs
day12/: day12.cabal  day12.hp  day12.hs  day12.prof  day12.ps  out.txt
day13/: day13.cabal  day13.hs  day13.js  day13.ts
day14/: day14.cabal  day14.hs
day15/: day15-profiling.hp  day15-profiling.prof  day15.cabal  day15.hs
day16/: day16-profiling.hp  day16-profiling.prof  day16.cabal  day16.hs
day17/: day17.cabal  day17.hs
day18/: day18-profiling.hp  day18-profiling.prof  day18.cabal  day18.hs
