cabal-version:      2.4
name:               day11
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Aaron
maintainer:         aaronmp01@gmail.com


executable day11
    main-is:          day11.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0,
                      split ^>=0.2.3.5

    -- Directories containing source files.
    -- hs-source-dirs:
    default-language: Haskell2010
