cabal-version:      2.4
name:               day12
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Aaron
maintainer:         aaronmp01@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable day12
    main-is:          day12.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0,
                      containers ^>=0.6.5.1

    ghc-options:
        -O2
        -prof
        -threaded
        -fprof-auto
        "-with-rtsopts=-N -p -s -hT"

    -- Directories containing source files.
    -- hs-source-dirs:
    default-language: Haskell2010
    
