cabal-version:      2.4
name:               day15
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Aaron
maintainer:         aaronmp01@gmail.com 


library-profiling: True


-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable day15
    main-is:          day15.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0,
                      parsec ^>=3.1.15.1
                      

    -- Directories containing source files.
    -- hs-source-dirs:
    default-language: Haskell2010


executable day15-profiling
  main-is:
    day15.hs
  ghc-options:
    -O2
    -prof
    -threaded
    -fprof-auto
    "-with-rtsopts=-N -p -s -hT"
  build-depends:
    base ^>=4.16.3.0,
    parsec ^>=3.1.15.1